All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>This field refers to the type of Time Entry record.</description>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>