All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>This field refers to information provided for Time Entry record</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>