All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>This field refers to time taken to complete the activity. It is defined in minutes</description>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>