All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>This field refers to the End Time of Time entry record</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>