All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/Salesforce_Event__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Event__c</fullName>
    <description>This field refers to relation between Time Entry and Salesforce Event</description>
    <label>Salesforce Event</label>
    <length>50</length>
    <type>Text</type>
</CustomField>