All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/ServiceMax_Event__c.field-meta.xml
<CustomField>
    <fullName>ServiceMax_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field refers to relation between Time Entry and Servicemax Event</description>
    <label>ServiceMax Event</label>
    <referenceTo>SVMX_Event__c</referenceTo>
    <relationshipLabel>Time Entrys</relationshipLabel>
    <relationshipName>Time_Entrys</relationshipName>
    <type>Lookup</type>
</CustomField>