All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/SM_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>