All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>This field refers to the Start Time of Time entry record</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>