All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <description>This field refers to relation between Time Entry and Task</description>
    <label>Task</label>
    <length>50</length>
    <type>Text</type>
</CustomField>