All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/Timesheet__c.field-meta.xml
<CustomField>
    <fullName>Timesheet__c</fullName>
    <label>Time Sheet</label>
    <referenceTo>Timesheet__c</referenceTo>
    <relationshipName>Time_Sheet_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>