All_Component_DX/force-app/main/default/objects/Timesheet_Entry__c/fields/Timesheet_Day__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Day__c</fullName>
    <description>This field refers to relation between Times Entry and Timesheet Details-Daily.</description>
    <label>Timesheet Day Entry</label>
    <referenceTo>Timesheet_Day_Entry__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Sheet_Entries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>